correcting spacing of label and value

--- a/Gatarr/Components/LabelledTextField.razor.css
+++ b/Gatarr/Components/LabelledTextField.razor.css
@@ -12,6 +12,5 @@
     white-space: nowrap;
     line-height: 1;
     cursor: default;
-    padding: 3px 7px;
-    margin: 5px 10px 5px 0;
+    padding: 0 7px 3px 0;
 }
